# adventofcode

./: .gitignore  .scalafmt.conf  Cargo.toml  README.md  build.sbt  build.sc
2017/day1/: Day1.scala
2017/day2/: Day2.scala
2017/day4/: Day4.scala
2017/day5/: Day5.scala
2017/day6/: Day6.scala
2017/day7/: Day7.scala
2018/: README.md
2018/day1/: Part2.scala  README.md  part1.hs  part2.hs
2018/day10/: Part1.scala  README.md
2018/day11/: Part1.scala  Part2.scala  README.md
2018/day2/: README.md
2018/day3/: Part2.scala  README.md  part1.hs
2018/day4/: Part1.scala  Part2.scala
2018/day5/: Part1.scala  Part2.scala
2018/day6/: Part1.scala  Part2.scala
2018/day7/: Part1.scala
2018/day8/: Part1.scala  README.md
2019/: README.md  build.sbt
adventofcode/src/bbstilson/: Problem.scala
adventofcode/src/bbstilson/aoc2017/: Day1.scala  (+5 more)
project/: plugins.sbt
src/: adventofcode.rs  api.rs  grid.rs  main.rs
src/data/: coord.rs  direction.rs  grid.rs  mod.rs
src/y15/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d2.rs  d23.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/y22/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d2.rs  d23.rs  d3.rs  d5.rs  d8.rs  d9.rs  mod.rs
src/y23/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d7p1.rs  d7p2.rs  d8.rs  d9.rs  mod.rs
src/y24/: d1.rs  d10.rs  d11.rs  d12.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/year2022/: day11.rs  day4.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
(+184 files in other folders)
