[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
fancy-regex = "0.12.0"
home = "0.5.4"
itertools = "0.12.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
